namespaces/master/blog-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`master-berwout.nl`) || Host(`master.berwout.nl`)
    kind: Rule
    services:
    - name: blog
      port: 8080
