namespaces/master/ingredient-service-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingredient-service-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`master-dinner.berwout.nl`) && Path(`/api/ingredients`)
    kind: Rule
    services:
    - name: ingredient-service
      port: 8080
